--- a/psk_fitness/psk_fitness.Client/_Imports.razor
+++ b/psk_fitness/psk_fitness.Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using psk_fitness.Client
 @using psk_fitness.Client.DTOs.WorkoutDTOs
+@using psk_fitness.Client.DTOs.TopicDTOs
