--- a/psk_fitness/psk_fitness.Client/Shared/Dropdown.razor
+++ b/psk_fitness/psk_fitness.Client/Shared/Dropdown.razor
@@ -3,7 +3,7 @@
 
 <div class="dropdown" id="@Id">
     <button class="btn btn-primary dropdown-toggle mr-4" data-toggle="dropdown" type="button" @onclick="e => this.show=!this.show "
-            aria-haspopup="true" aria-expanded="false">
+            aria-haspopup="true" aria-expanded="false" style="background-color: green;">
         @Tip
     </button>
     <CascadingValue name="Dropdown" Value="@this">
