--- a/psk_fitness/psk_fitness.Client/_Imports.razor
+++ b/psk_fitness/psk_fitness.Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using psk_fitness.Client
 @using psk_fitness.Client.DTOs.WorkoutDTOs
 @using psk_fitness.Client.DTOs.TopicDTOs
+@using psk_fitness.Client.DTOs.ExerciseDTOs
