--- a/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
+++ b/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
@@ -135,6 +135,11 @@
 
     private void OpenModal()
     {
+        Console.WriteLine("Br br");
+        Console.WriteLine("Br br");
+        Console.WriteLine("Br br");
+        Console.WriteLine("Br br");
+
         isModalOpen = true;
         StateHasChanged();
     }
