Fixed major issues

--- a/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
+++ b/psk_fitness/psk_fitness/Components/Exercises/Pages/CreateExercise.razor
@@ -15,7 +15,7 @@
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" @onclick="OpenModal">
-    New ExerciseS
+    New Exercise
 </button>
 
 <div class="@ModalDisplayClass" tabindex="-1" aria-labelledby="newExerciseModalLabel" aria-hidden="true">
