Fixed some naming issues

--- a/psk_fitness/psk_fitness.Client/Pages/Modal.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Modal.razor
@@ -141,7 +141,7 @@
 
     void OnExerciseSelected(ExerciseForWorkoutDTO exercise)
     {
-        newWorkout.ExreciseIds.Add(exercise.Id);
+        newWorkout.ExerciseIds.Add(exercise.Id);
     }
 
     [Parameter]
