--- a/psk_fitness/psk_fitness.Client/Pages/Modal.razor
+++ b/psk_fitness/psk_fitness.Client/Pages/Modal.razor
@@ -13,27 +13,26 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
+                <h5 class="modal-title">Add workout</h5>
                 <button type="button" @onclick="() => OnDeleteWorkout()" class="btn btn-primary">
                     <span aria-hidden="true">&times;</span>
                     Delete workout
                 </button>
-
 
             </div>
             <div class="modal-body">
                 <form>
 
                     <div class="title-form">
-                        <label for="startingTimeHours" class="form-label">Workout starting hour:</label>
+                        <label for="workoutTitle" class="form-label">Workout Title:</label>
                         <div class="d-flex align-items-center">
                             @if (_doNotShowInputBoxes && selectedWorkout != null)
                             {
-                                <span>@selectedWorkout.Duration.</span>
+                                <span>@selectedWorkout.Title.</span>
                             }
                             else
                             {
-                                <input type="text" id="startingTimeHours" name="TitleInput" @bind="newWorkout.Title" required />
+                                <input type="text" id="workoutTitle" name="TitleInput" @bind="newWorkout.Title" required />
                             }
                         </div>
                     </div>
@@ -80,11 +79,11 @@
                     <Dropdown id="workoutTypeDropdown" TItem="TopicForWorkoutDTO" OnSelected="@OnSelected">
                         <InitialTip>Select a topic</InitialTip>
                         <ChildContent>
-                            if (Topics != null)
+                            @if (Topics != null)
                             {
                                 @foreach (TopicForWorkoutDTO topic in Topics)
                                 {
-                                    if (topic.Title != null)
+                                    @if (topic.Title != null)
                                     {
                                         <DropdownListItem Item="@topic">@topic.Title</DropdownListItem>
                                         <div class="dropdown-divider"></div>
@@ -172,9 +171,8 @@
         Console.WriteLine("Starting to create a workout");
         try
         {
-            newWorkout.Date = new DateOnly(DateTime.Now.Year, DateTime.Now.Month, _selectedDayOnCalendar);     
+            newWorkout.Date = new DateOnly(DateTime.Now.Year, DateTime.Now.Month, _selectedDayOnCalendar);
             WorkoutCreateDTO result = await WorkoutService.CreateWorkoutAsync(newWorkout);
-            Console.WriteLine("Workout created successfully!");
         }
         catch (Exception ex)
         {
